--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.561.0",
     "mediabunny": "^1.26.0",
     "next": "16.0.10",
     "react": "19.2.1",
