--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "media-converter",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=16.8.0"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
+    "lint": "eslint",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed"
@@ -18,22 +15,21 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
     "mediabunny": "^1.26.0",
-    "next": "13.5.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "16.0.10",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0",
-    "@types/node": "^16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.6",
-    "playwright": "^1.40.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.1",
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.10",
+    "playwright": "^1.57.0",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
